--- a/client/src/app/room-list/room-list.component.html
+++ b/client/src/app/room-list/room-list.component.html
@@ -1,5 +1,8 @@
 <ul>
 	<li *ngFor="Let room of rooms">
-		{{room}}
+		<a [routerLink]="['/rooms', room]">{{room}}</a>
 	</li>
 </ul>
+
+<input [(ngModel)]="newRoomName"./>
+<button (click)="onNewRoom()">Add new room</button>
