Fixed all errors that Grunt displayed

--- a/client/src/app/room-list/room-list.component.html
+++ b/client/src/app/room-list/room-list.component.html
@@ -1,6 +1,6 @@
 <ul>
 	<li *ngFor="Let room of rooms">
-		<a [routerLink]="['/rooms', room]">{{room}}</a>
+		<a [routerLink]="['/rooms', rooms]">{{rooms}}</a>
 	</li>
 </ul>
 
