--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,5 +1,20 @@
 <h2>Welcome to chat!<h2>
-	
+<!--	
+<form #f="ngForm" >
+	<label for="userName">Username: </label>
+	<input name="userName" 
+			id="userName" 
+			[(ngModel)]="userName" required />
+	<input name="address"
+			[(ngModel)]="address" />
+
+
+	<button type="button" (click)="onSubmit(f)">
+		Save
+	</button>
+</form>
+-->
+
 <input type="text" [(ngModel)]="userName" />
 <button (click)="onLogin()">Login</button>
 
