--- a/client/src/app/room/room.component.html
+++ b/client/src/app/room/room.component.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <!-- <p> -->
   <!-- Room works! -->
 <!-- </p> -->
@@ -5,22 +7,22 @@
   <title>Chat </title>
   <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
+<body>
+  <div id="wrapper">
+    <div id="menu">
+      <p class="welcome" Welcome to chat, <b></b></p>
+      <p class="logout"><a id="exit" href="#">Exit Chat! </a></p>
+      <div style="clear:both"></div>
+    </div>
 
-<div id="wrapper">
-  <div id="menu">
-    <p class="welcome" Welcome to chat, <b></b></p>
-    <p class="logout"><a id="exit" href="#">Exit Chat! </a></p>
-    <div style="clear:both"></div>
+    <div id="chatbox"></div>
+
+    <form name="message" <action="">
+      <input name="usermsg" type="text" id="usermsg" size="63"/>
+      <input name="submitmsg" type="submit" id="submitmsg" value="Send"/>
+    </form>
   </div>
-
-  <div id="chatbox"></div>
-
-  <form name="message" <action="">
-    <input name="usermsg" type="text" id="usermsg" size="63"/>
-    <input name="submitmsg" type="submit" id="submitmsg" value="Send"/>
-  </form>
-</div>
-<script type="text/javascript"></script>
+  <script type="text/javascript"></script>
 </body>
 
 <div>{{roomId}}</div>
