Two errors still in grunt! But added

--- a/client/src/app/room/room.component.html
+++ b/client/src/app/room/room.component.html
@@ -23,13 +23,13 @@
   <script type="text/javascript"></script>
 </body> -->
 
-<div>{{roomId}}</div>
+<div>{{roomName}}</div>
 
-<ul>
+<!-- <ul>
   <li *ngFor='let message of messages'>
     {{message}}
   </li>
-</ul> 
+</ul>  -->
 
 <ul>
   <li *ngFor='let user of users'>
