Error fic, html doesn't work

--- a/client/src/app/room/room.component.html
+++ b/client/src/app/room/room.component.html
@@ -2,7 +2,7 @@
   <!-- Room works! -->
 <!-- </p> -->
 
-  <div id="wrapper">
+<!--   <div id="wrapper">
     <div id="menu">
       <p class="welcome" Welcome to chat, <b></b></p>
       <p class="logout"><a id="exit" href="#">Exit Chat! </a></p>
@@ -15,7 +15,7 @@
       <input name="usermsg" type="text" id="usermsg" size="63"/>
       <input name="submitmsg" type="submit" id="submitmsg" value="Send"/>
     </form>
-  </div>
+  </div> -->
 
 <div>{{roomName}}</div>
 
