--- a/client/src/app/room/room.component.html
+++ b/client/src/app/room/room.component.html
@@ -1,21 +1,26 @@
 <!-- <p> -->
   <!-- Room works! -->
 <!-- </p> -->
-
-<!--   <div id="wrapper">
-    <div id="menu">
-      <p class="welcome" Welcome to chat, <b></b></p>
-      <p class="logout"><a id="exit" href="#">Exit Chat! </a></p>
-      <div style="clear:both"></div>
+<div class="row">
+  <div class="col-md-3">
+    
+  </div>
+  <div class="col-md-6 center-back">
+    <div id="messageBoard" style="list-style-type: none">
+      <li id="chatter" *ngFor='let message of messages'>
+        {{message}}
+      </li>
     </div>
+  </div>
+  <div class="col-md-3">
+    <div id="userId" style="list-style-type: none">
+      <li id="userList" *ngFor='let user of users'>
+        {{user}}
+      </li>
+  </div>
+</div>
+</div>
 
-    <div id="chatbox"></div>
-
-    <form name="message" <action="">
-      <input name="usermsg" type="text" id="usermsg" size="63"/>
-      <input name="submitmsg" type="submit" id="submitmsg" value="Send"/>
-    </form>
-  </div> -->
 
 <div>{{roomName}}</div>
 
@@ -23,7 +28,7 @@
   <li *ngFor='let message of messages'>
     {{message}}
   </li>
-</ul>  
+</ul>
 
 <ul>
   <li *ngFor='let user of users'>
