--- a/client/src/app/room-list/room-list.component.html
+++ b/client/src/app/room-list/room-list.component.html
@@ -1,3 +1,11 @@
+ <div class="row">
+ 	<div class="col-md-8">
+ 		<h3> 
+ 			Welcome {{ userName }}, please create or select available room belove
+ 		</h3>
+ 	</div>
+ </div>
+
  <ul>
 	<li *ngFor='let room of rooms'>
 		<a [routerLink]="['/rooms', room]">{{room}}</a>
