--- a/client/src/app/room-list/room-list.component.html
+++ b/client/src/app/room-list/room-list.component.html
@@ -1,14 +1,14 @@
- <div class="row">
+<!--  <div class="row">
  	<div class="col-md-8">
  		<h3> 
  			Welcome {{ userName }}, please create or select available room belove
  		</h3>
  	</div>
- </div>
+ </div> -->
 
  <ul>
 	<li *ngFor='let room of rooms'>
-		<a [routerLink]="['/rooms', room]">{{room}}</a>
+		<a [routerLink]="['rooms', room]">{{room}}</a>
 	</li>
 </ul> 
 
