--- a/client/src/app/room/room.component.html
+++ b/client/src/app/room/room.component.html
@@ -1,7 +1,7 @@
 <!-- <p> -->
   <!-- Room works! -->
 <!-- </p> -->
-<!-- <div class="row">
+<div class="row">
   <div class="col-md-3">
     
   </div>
@@ -20,7 +20,7 @@
   </div>
 </div>
 </div>
- -->
+
 
 <div>{{roomName}}</div>
 
