--- a/client/src/app/room-list/room-list.component.html
+++ b/client/src/app/room-list/room-list.component.html
@@ -8,7 +8,7 @@
 
  <ul>
 	<li *ngFor='let room of rooms'>
-		<a [routerLink]="['rooms', room]">{{room}}</a>
+		<a [routerLink]="['/rooms', room]">{{room}}</a>
 	</li>
 </ul> 
 
